[package]
name = "sandchip"
version = "0.1.0"
authors = ["Andreas Liljeqvist <bonega@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.0"
sdl2 = "0.32.2"

[dev-dependencies]
criterion = "0.2.11"

[lib]
name="sandchiplib"
path = "src/lib.rs"

[[bench]]
name="my_benchmark"
harness = false

[profile.release]
opt-level = 3
